# open-trading-api

./: .gitignore  README.md  check_indices.py  debug_balance.py  debug_kis_api.py  debug_price.py  domestic_trading_test.py  kis_devlp.yaml  project_summary.md  pyproject.toml  refactoring_guide.md  run_server.md  test_index_api.py
app/: main.py
app/api/v1/: endpoints.py
app/application/: trading_service.py
app/core/: config.py
app/domain/: models.py
app/domain/repositories/: stock_repository.py
examples_user/: kis_auth.py
examples_user/domestic_stock/: domestic_stock_examples.py
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: app.js
scripts/: validate_js.js
scripts/manual_tests/: check_indices.py  debug_balance.py  debug_kis_api.py  debug_price.py  domestic_trading_test.py  test_index_api.py  test_orders_comprehensive.py  test_search.py
tests/: test_trading_service.py
tests/unit/: test_models.py
