[project]
name = "kis-github"
version = "1.0.0"
description = "korea investment open api sample codes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "pycryptodome>=3.23.0",
    "pydantic-settings>=2.12.0",
    "pyqt6>=6.9.1",
    "pyside6>=6.9.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
